# Qortex

./: .cbmignore  .env.example  .gitignore  AGENTS_2.md  AGENTS_3.md  Makefile  README.md  doc.md  mkdocs.yml  pyproject.toml  results.md  test-viz.py  tutorial_list.md
__others/: ## Proposed library: `Qortex`.md  ## Research conclusion.md  AGENTS_2.md  AGENTS_3.md  AGENTS_4.md  Untitled-4.md  Your ideas are mostly strong, but severa.md
artifacts/qortex_gallery/: niivue_viewer_demo.html
artifacts/real_zoo_inference_demo/: README.md  real_inference_results.json
data/qortex_visual_test/: qortex_visual_viewer.html
docs/: hooks.py  index.md
docs/api/: artifact.md  cli.md  conversion.md  dataset.md  datasets.md  index.md  neuroclassic.md  visualization.md
docs/artifacts/: compare-splits.md  index.md  inspect.md  manifest.md  ml-bridge.md  visualize-samples.md
docs/concepts/: data-model.md  index.md  openneuro-and-bids.md  readiness-first.md  what-is-qortex.md  workflow.md
docs/conversion/: eda.md  formats.md  index.md  pipeline.md  provenance.md  splits.md  windows.md
docs/dataset/: bids-entities.md  index.md  inspect.md  metadata.md  search-catalog.md  snapshots.md
docs/download/: cache.md  index.md  local-index.md  metadata-only.md  plan.md  resume.md  selective-download.md
docs/getting-started/: first-visual-audit.md  index.md  install.md  quickstart.md
docs/guides/: generated-figures.md  index.md
docs/modalities/: conversion.md  index.md  readiness.md  selection.md
docs/neuroai/: compiler.md  external-runners.md  index.md  models.md  outputs.md  pipeline.md  sources.md
docs/readiness/: can-train.md  content-status.md  doctor.md  first-batch.md  index.md  label-readiness.md  leakage-check.md  minimum.md  recipes.md
docs/troubleshooting/: artifacts.md  bids.md  dicom.md  downloads.md  index.md  install.md  labels.md  openneuro.md  overlays.md  visualization.md
docs/tutorials/: coverage.md  index.md  t01-eeg-motor-imagery.md  t02-eeg-connectivity.md  t03-eeg-sleep-staging.md  t04-eeg-seizure-detection.md  t05-mri-dementia-baseline.md  t06-mri-age-sex-qc.md  t07-fmri-design-readiness.md  t08-brain-tumour-segmentation.md
docs/visualization/: artifact-visualization.md  colormaps-and-windows.md  dicom-browser.md  dwi-qc.md  eeg-viewer.md  fmri-qc.md  index.md  local-viewer.md  overlays.md  segmentation-comparison.md  visual-audit.md  visual-pipeline.md  visualize-openneuro.md
qortex_compile_check/: execution-plan.json
scripts/: eeg_classification_report.py  enrich_docs_pages.py  generate_docs_examples.py  run_real_zoo_inference_demo.py  sleep_staging_report.py  update_openneuro_stats.py  verify_docs_images.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/artifacts/: index.html
site/concepts/: index.html
site/conversion/: index.html
site/dataset/: index.html
site/download/: index.html
site/getting-started/: index.html
site/guides/: index.html
site/modalities/: index.html
site/neuroai/: index.html
site/readiness/: index.html
site/search/: search_index.json
site/troubleshooting/: index.html
site/tutorials/: index.html
site/visualization/: index.html
src/qortex/: __init__.py  artifact.py  decision.py  preview.py
src/qortex_rs/: Cargo.toml
test/: README.md  project_support.py  run_all.py
test/0_import_config/: run.py
test/10_local_index_validation_cache_project/: run.py
test/11_catalog_project/: run.py
test/12_cli_project/: run.py
test/13_dataset_facade_project/: run.py
test/14_live_openneuro_metadata_project/: run.py
test/15_decision_workflows_project/: run.py
test/16_catalog_ingestion_project/: run.py
test/17_remote_inspection_project/: run.py
test/18_label_landscape_project/: run.py
test/19_signal_budget_project/: run.py
test/1_manifest_models/: run.py
test/20_dataset_selector_project/: run.py
test/2_selection_planning/: run.py
test/3_remote_preview_project/: run.py
test/4_download_specific_parts_project/: run.py
test/5_eda_events/: run.py
test/6_conversion_artifact/: run.py
test/7_readiness_report_project/: run.py
test/8_behavior_loader_project/: run.py
test/9_window_split_project/: run.py
test/project_01_import_and_config/: run.py
test/project_02_manifest_fetch/: run.py
test/project_03_manifest_graph/: run.py
test/project_04_metadata_preview/: run.py
test/project_05_selection_plan/: run.py
test/project_06_metadata_download/: run.py
test/project_07_local_index/: run.py
test/project_08_readiness_report/: run.py
test/project_09_eda_report/: run.py
test/project_10_events_to_parquet/: run.py
test/project_11_artifact_access/: run.py
test/project_12_decision_workflow/: run.py
tests/: conftest.py  test_checks.py  test_cli_neuro_classic.py  test_console_annotation_store.py  test_console_cache_inventory.py  test_console_conversion_runs.py  test_console_error_mapping.py  test_console_fmri_qc_runs.py  test_console_model_cache_control.py  test_console_model_catalog.py  test_console_model_execution.py  test_console_streaming.py  test_convert_format_writers.py  test_datasets_msd_brain.py  test_decision_readiness_contract.py  test_eda_coverage.py  test_eda_participants_summary.py  test_manifest_graph_eeglab_companions.py  test_neuroai_compiler.py  test_neuroai_compiler_acquisition.py  test_neuroai_compiler_compatibility.py  test_neuroai_compiler_geometry.py  test_neuroai_compiler_ranking.py  test_neuroai_compiler_resources.py  test_neuroai_dicom_outputs_fail_closed.py  test_neuroai_execute.py  test_neuroai_external.py  test_neuroai_extractors_braindecode_model.py  test_neuroai_extractors_monai_bundle.py  test_neuroai_license_gate.py  test_neuroai_model_cache.py  test_neuroai_monai_hardening.py  test_neuroai_overlay_output.py  test_neuroai_pipeline.py  test_neuroai_prompt.py  test_neuroai_prompt_predict_cli.py  test_neuroai_promptable.py  test_neuroai_registry_gate_enforcement.py  test_neuroai_sam_adapters.py  test_neuroai_security_gate.py  (+27 more)
web/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
(+495 files in other folders)
